--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,19 @@
+# pystan must be installed before prophet
+# you may need to pip install it on it's own
+# before installing the remaining requirements
+# pip install pystan==3.7.0
+
+# pystan==3.7.0
+
 fastapi==0.95.2
+gunicorn==20.1.0
 uvicorn==0.22.0
+
+
+# somehow the issue with current numpy version so 1.24.1 seem to be stable
+numpy==1.24.1
+prophet==1.1.3
+joblib==1.2.0
+pandas==2.0.1
+plotly==5.14.1
+yfinance==0.2.18
