--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 # pip install pystan==3.7.0
 
 # pystan==3.7.0
-
+pystan==3.7.0
 fastapi==0.95.2
 gunicorn==20.1.0
 uvicorn==0.22.0
@@ -17,3 +17,4 @@ joblib==1.2.0
 pandas==2.0.1
 plotly==5.14.1
 yfinance==0.2.18
+cython==3.0.11
